force-app/main/default/objects/CCA_Course__c/CCA_Course__c.object-meta.xml
<CustomObject>
    <label>CCA Course</label>
    <nameField>
        <displayFormat>Course-{0000}</displayFormat>
        <label>Course ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CCA Courses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>