force-app/main/default/objects/CCA_Course__c/fields/Certificate_Text__c.field-meta.xml
<CustomField>
    <fullName>Certificate_Text__c</fullName>
    <label>Certificate Text</label>
    <type>TextArea</type>
</CustomField>