force-app/main/default/objects/CCA_Course__c/fields/Course_Category__c.field-meta.xml
<CustomField>
    <fullName>Course_Category__c</fullName>
    <label>Course Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Education Fund</fullName>
            </value>
            <value>
                <fullName>IHSS / Cuidado en Casa</fullName>
            </value>
            <value>
                <fullName>Basic Skills Courses / Conocimientos</fullName>
            </value>
            <value>
                <fullName>Career Courses / Para Carrera</fullName>
            </value>
            <value>
                <fullName>Personal Developement / Desarrollo Personal</fullName>
            </value>
            <value>
                <fullName>Second Quiz</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>