force-app/main/default/objects/CCA_Course__c/fields/Is_it_a_Training_Fund_Course__c.field-meta.xml
<CustomField>
    <fullName>Is_it_a_Training_Fund_Course__c</fullName>
    <label>Is it a Training Fund Course?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>