force-app/main/default/objects/CCA_Course__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Course_Name__c</columns>
    <columns>Course_Category__c</columns>
    <columns>Is_it_an_Active_Course__c</columns>
    <columns>Is_it_a_Training_Fund_Course__c</columns>
    <columns>Course_Cost__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>